Rework color classes, detect primary color of the block